# $Id$

2008-03-17	Ivan Y. Khvostishkov

	* main/Flow/PartViewer.class.php: references to parent and root model
	added, useful for widgets.

	* core/Base/Assert.class.php: added isEmpty(), isIndexExists(),
	isScalar().

	* main/ProtoBuilders/: more builders.

	* core/Form/Form.class.php, core/Form/PlainForm.class.php: added
	ability to get inner values by path reference.

	* main/ProtoBuilders/: partial objects building ability, useful for
	wizards.


2008-03-15	Ivan Y. Khvostishkov

	* main/Utils/RussianTextUtils.class.php: fixed selectCaseForNumber()
	for numbers larger than 100.

2008-03-13	Ivan Y. Khvostishkov

	* core/Form/Primitives/PrimitivePolymorphicIdentifier.class.php:
	primitive for holding polymorphic values.

	* core/Form/Form.class.php: getPrimitiveError() and
	dropPrimitiveError() for custom errors handling.

2008-03-07	Denis M. Gabaidulin

	* main/UnifiedContainer/UnifiedContainer.class.php: dropList()
	implemented.

2008-03-05	Ivan Y. Khvostishkov

	* core/Form/Primitives/PrimitiveDate.class.php: exportValue()
	implemented.

2008-03-04	Ivan Y. Khvostishkov

	* core/Form/Form.class.php: some documentation.

	* core/Form/Primitives/BasePrimitive.class.php: getFormValue() added.

2008-03-04	Konstantin V. Arkhipov

	* core/DB/PostgresDialect.class.php: PostgreSQL-8.3 doesn't like
	comparsion between integer and varchar, so dialect now quotes all
	integers by default; again.

2008-03-04	Denis M. Gabaidulin

	* core/Base/Assert.class.php: isNotEmptyArray().

2008-02-29	Denis M. Gabaidulin

	* core/Cache/WatermarkedPeer.class.php: version duplication removed.

2008-02-28	Konstantin V. Arkhipov

	* 1.0.2 released.

2008-02-28	Ivan Y. Khvostishkov

	* main/Net/Soap/PrototypedSoapClient.class.php: pretty wrap for
	SoapClient with strict XSD validation and Business classes mappings.

2008-02-28	Vladlen Y. Koshelev

	* core/Form/Filters/RussianTypograph.class.php: now works with
	unicode correctly; extra rules added: compress whitespaces,